# cockroach-db-cluster

./: .env.example  .gitignore  README.md  create-cluster-certs.sh  destroy-cluster.sh  docker-compose.yml  init-cluster.sh
dbcluster/: docker-compose-postgres.yml  docker-compose.yml
dbcluster/haproxy-config/: haproxy.cfg
dbcluster/scripts/: create-db-and-user.sh  destroy-cluster.sh
dbcluster/src/: create-cluster-certs.sh
haproxy-config/: haproxy.cfg
nodejs/: Dockerfile  docker-compose.yml
nodejs/src/: main.js
python-psycopg3/: Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  yoyo.ini
python-psycopg3/migrations/: 0000-initial_schema.py  0001-create_foo.py  0002-alter_foo.py  010.test.sql
python-psycopg3/src/: main.py
python-sqlalchemy-core/: Dockerfile  pyproject.toml
python-sqlalchemy-core/src/: main.py  tables.py
python-sqlalchemy-core/src/migrations/: 0000-initial_schema.py  0001-add_column.py
scripts/: create-db-and-user.sh
